# patient-memory

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: run_example.py  sample_session1.json  sample_session2.json
prompts/: project_to_memory.md
schemas/: memory_projection.schema.json
src/healthos_memory/: __init__.py  constants.py  db.py  embeddings.py  ingest.py  mcp_server.py  project.py  retrieve.py  vectors.py
