[project]
name = "healthos-patient-memory"
version = "0.1.0"
description = "Memória/RAG por paciente (episódio/evidência + estado dimensional ℳ + grafo GEM bi-temporal) para agentes LLM."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "jsonschema>=4.0"]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
openai = []  # usa apenas stdlib (urllib); chave via env

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
